# -ABSA-BERT

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: ate.yaml  atsc.yaml
data/__MACOSX/: ._data
data/__MACOSX/data/: ._restaurants_test.csv  ._restaurants_train.csv
scripts/: download_data.sh
src/absa/: __init__.py  analyze.py  config.py  data.py  models.py  predict_ate.py  predict_atsc.py  train_ate.py  train_atsc.py  utils.py
src/absa/predict/: ate.py  atsc.py
src/absa/train/: ate.py  atsc.py
tests/: test_data.py  test_models.py  test_utils.py
