[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "absa-bert"
version = "0.1.0"
description = "Aspect-Based Sentiment Analysis with BERT (ATE + ATSC)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "gdown>=5.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
absa-train-ate  = "absa.train.ate:main"
absa-train-atsc = "absa.train.atsc:main"
absa-predict-ate  = "absa.predict.ate:main"
absa-predict-atsc = "absa.predict.atsc:main"
absa-analyze-data = "absa.analyze:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts  = "-v --tb=short"

[tool.coverage.run]
source = ["src/absa"]
omit   = ["tests/*"]
